class Booking {
    constructor(teacher, student, subject, date) {
        this.teacher = teacher
        this.student = student
        this.subject = subject
        this.date = date
    }
}

module.exports = Booking