class Comment {
    constructor(teacher, student, text, score) {
        this.teacher = teacher
        this.student = student
        this.text = text
        this.score = score
    }
}

module.exports = Comment