class Job {
    constructor(teacher, title, content, price) {
        this.teacher = teacher
        this.title = title
        this.content = content
        this.price = price
    }
}

module.exports = Job